--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p>This is the spotify test website.</p>
         
         <p>
-            <a id=ResetButton href="http://127.0.0.1:5500/web/index.html"><button>Reset</button></a>
+            <a id=ResetButton href="https://alphaq13.github.io/Spotify-Data/"><button>Reset</button></a>
             <button onclick="authorizeUser()" id='AuthButton'>Authorize User</button>
 
 
