--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         </div>
         <div class="chunk">
             <p>
-                <!--<a id=ResetButton href="https://alphaq13.github.io/Spotify-Data/"><button>Reset</button></a>-->
-                <a id=ResetButton href=SPOTIFY_REDIRECT_URI><button>Reset</button></a>
+                <a id=ResetButton href="https://alphaq13.github.io/Spotify-Data/"><button>Reset</button></a>
+                <!--<a id=ResetButton href=SPOTIFY_REDIRECT_URI><button>Reset</button></a>-->
                 <button onclick="authorizeUser()" id='AuthButton'>Authorize User</button>
 
 
