--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
                 padding: 20px;
                 text-align: center;
             }
+            .boxsizingBorder {
+                -webkit-box-sizing: border-box;
+                -moz-box-sizing: border-box;
+                box-sizing: border-box;
+            }
+            textarea {
+                width: 100%;
+            }
             .column {
                 float: left;
                 width: 20%;
