--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <body style="background-color:rgb(106, 138, 108);"></body>
 
         <div class="header">
-            <h1>Spoopify Test</h1>
+            <h1>Stoopidfy Test</h1>
             <p>This is the spotify test website.</p>
         </div>
         <div class="chunk">
